# idx-bei

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md
.deprecated/: fetchUtil.js  package-lock.json  package.json
.deprecated/.prompt/: detailedNews.js  main.js  main.md  news.md
.deprecated/examples/: broker-search.js  company-profiles.js  financial-ratio.js  news-detailed.js  news-summary.js
.deprecated/listed-companies/: companyProfiles.js
.deprecated/market-data/stocks-data/stock-list/: getBoards.js  getSectors.js  getSecuritiesStock.js
.deprecated/members-and-participants/: memberProfiles.js
.deprecated/utils/: template.js
.github/workflows/: README.md  deploy-pages.yml  refresh-data.yml  test-scraper.yml
data/: allCompanies.json  brokerSearch.json  index.html  structured_warrants.html  structured_warrants.json  structured_warrants_combined.json  underlying_ohlc.json  warrant_prices.json
docker-compose/: neo4j.yml
python/: README.md  neo4j_ingest.py  pyproject.toml  run_dashboard.py  scrape_broker_search.py  scrape_company_profiles.py  scrape_financial_ratio.py  scrape_idx_news.py  scrape_index_summary.py  scrape_structured_warrants.py  scrape_sw_combined.py  scrape_underlying_ohlc.py  scrape_warrant_prices.py  show_summary.py  stock_analysis_psql.py  yfinance_data.py
