[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arelle-release>=2.37.33",
    "matplotlib>=3.10.3",
    "neo4j>=5.28.1",
    "psycopg2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "tqdm>=4.67.1",
    "yfinance>=0.2.59",
    "curl_cffi>=0.7.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
]
